--- a/package.json
+++ b/package.json
@@ -1,47 +1,64 @@
 {
-  "name": "hoteltoxic",
-  "version": "1.0.0",
-  "description": "сайт бронирования номеров в отеле Toxic",
+  "name": "webpack-starter-config",
+  "version": "4.17.2",
+  "description": "Simple webpack config",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack-dev-server --mode development",
-    "build": "webpack --mode production"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prebuild": "rimraf public && npm install",
+    "build": "webpack --mode production --colors --progress",
+    "prestart": "rimraf public && npm install",
+    "dev": "webpack-dev-server --mode development"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/LeeSwagger/webpack-starter.git"
   },
   "keywords": [
-    "отель",
-    "бронирование"
+    "webpack",
+    "es6",
+    "es7",
+    "babel",
+    "sass"
   ],
-  "author": "Лобода В.Ю",
-  "license": "ISC",
+  "author": "LeeSwagger",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/LeeSwagger/webpack-starter/issues"
+  },
+  "homepage": "https://github.com/LeeSwagger/webpack-starter#readme",
   "devDependencies": {
-    "@babel/cli": "^7.6.4",
-    "@babel/core": "^7.6.4",
-    "@babel/preset-env": "^7.6.3",
-    "autoprefixer": "^9.7.0",
-    "babel-loader": "^8.0.6",
-    "css-loader": "^3.2.0",
-    "file-loader": "^4.2.0",
+    "@babel/core": "^7.4.4",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.4.4",
+    "@babel/plugin-proposal-optional-chaining": "^7.2.0",
+    "@babel/preset-env": "^7.4.4",
+    "autoprefixer": "^9.5.1",
+    "babel-loader": "^8.0.5",
+    "css-loader": "^2.1.1",
+    "cssnano": "^4.1.10",
+    "file-loader": "^3.0.1",
+    "glob": "^7.1.4",
     "html-loader": "^0.5.5",
-    "html-webpack-plugin": "^3.2.0",
-    "image-webpack-loader": "^6.0.0",
-    "mini-css-extract-plugin": "^0.8.0",
-    "node-sass": "^4.13.0",
-    "optimize-css-assets-webpack-plugin": "^5.0.3",
+    "html-webpack-plugin": "^3.0.6",
+    "image-webpack-loader": "^4.6.0",
+    "mini-css-extract-plugin": "^0.6.0",
+    "node-sass": "^4.12.0",
     "postcss-loader": "^3.0.0",
-    "postcss-preset-env": "^6.7.0",
     "pug": "^2.0.4",
     "pug-html-loader": "^1.1.5",
     "pug-loader": "^2.4.0",
-    "sass-loader": "^8.0.0",
-    "style-loader": "^1.0.0",
-    "svg-inline-loader": "^0.8.0",
-    "uglifyjs-webpack-plugin": "^2.2.0",
-    "webpack": "^4.41.2",
-    "webpack-cli": "^3.3.9",
-    "webpack-dev-server": "^3.9.0"
+    "rimraf": "^2.6.3",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
+    "uglifyjs-webpack-plugin": "^2.1.2",
+    "webpack": "^4.31.0",
+    "webpack-cli": "^3.3.2",
+    "webpack-dev-server": "^3.3.1",
+    "yargs": "^13.2.2"
   },
   "dependencies": {
-    "@babel/polyfill": "^7.6.0",
-    "jquery": "^3.4.1"
+    "babel-polyfill": "^6.26.0",
+    "jquery": "^3.4.1",
+    "lodash": "^4.17.11"
   }
 }
